// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PageCount plural 1`] = `
<a
  className="c-page-explorer__see-more"
  href="/admin/pages/1/"
>
  See all 5 pages
  <Icon
    name="arrow-right"
  />
</a>
`;

exports[`PageCount works 1`] = `
<a
  className="c-page-explorer__see-more"
  href="/admin/pages/1/"
>
  See all 1 page
  <Icon
    name="arrow-right"
  />
</a>
`;
